# WebSite_FastAPI-React

./: .gitignore  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/app/: chek_db.py  main.py  setup.py
backend/app/api/: admins.py  api_v1_router.py  auth.py  healthdb.py  root_router.py
backend/app/api/admin_router/: club_team.py  match.py  match_set.py  media.py  news.py  player_gallery.py  player_statistic.py  players.py  seasons.py  standings.py  tournament_team.py
backend/app/api/public_router/: club_team.py  match.py  match_set.py  player_gallery.py  players.py  (+3 more)
backend/app/core/: config.py  dependencies.py  logging_.py  permissions.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: admin.py  club_team.py  match.py  match_set.py  media.py  news.py  player_gallery.py  player_statistic.py  players.py  season.py  standings.py  tournament_team.py
backend/app/services/: admin_service.py  club_team.py  match.py  match_set.py  news.py  player_statistic.py  players.py  players_gallery.py  season.py  standings.py  tournament_team.py
backend/migrations/: env.py
backend/migrations/versions/: 0520d69c623d_add_season_in_tournamentteam_model.py  18352a02d0d0_add_lazy_selectin_in_model_playergalerey.py  291720efaf77_add_laze_selectin_in_news.py  329609d34bf3_update_relationship.py  5a7959b18e66_add_background_media_id_to_players.py  71a7bf74a355_update_relationship.py  e1ae16fc0149_add_season_id_in_unique.py  ea9b8ba414fe_second.py  eef4639d9eb5_add_role_admin.py  f394706da411_initial.py
(+73 files in other folders)
