[project]
name = "samurais-backend"
version = "0.1.0"
description = "Backend for Samurais volleyball club website"
authors = [
    {name = "IgorFDev",email = "if7187069@gmale.com"}
]
requires-python = "^3.12"
dependencies = [
    "fastapi[standard] (>=0.136.1,<0.137.0)",
    "uvicorn (>=0.47.0,<0.48.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "beautifulsoup4 (>=4.14.3,<5.0.0)",
    "requests (>=2.34.2,<3.0.0)",
    "lxml (>=6.1.0,<7.0.0)",
    "psycopg (>=3.3.4,<4.0.0)",
    "psycopg2 (>=2.9.12,<3.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "passlib (>=1.7.4,<2.0.0)",
    "bcrypt (==3.2.2)",
    "python-slugify (>=8.0.4,<9.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)"
]
